tests/errors/error_iterate_int.nimmy
# Error: Cannot iterate over an integer
for x in 42:
  echo x